Most things in position. Bathroom needs to be moved. Line measuring added

--- a/basement.html
+++ b/basement.html
@@ -9,7 +9,8 @@
 
     <body>
         <div id="floorplan"></div>
-        
+        <div id="coords"></div>
+        <div id="length"></div>
         
         <script src="diagram.js"></script>
     </body>
